--- a/FoodPlanner/FoodPlanner/MainWindow.xaml
+++ b/FoodPlanner/FoodPlanner/MainWindow.xaml
@@ -3,6 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <ComboBox Margin="10,10,10,0" VerticalAlignment="Top" Name="selectRecipe" SelectionChanged="selectRecipe_SelectionChanged" />
+        <ListBox HorizontalAlignment="Right" Margin="0,42,10,10" Width="150"/>
+
     </Grid>
 </Window>
