--- a/FoodPlanner/FoodPlanner/MainWindow.xaml
+++ b/FoodPlanner/FoodPlanner/MainWindow.xaml
@@ -4,7 +4,7 @@
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <ComboBox Margin="10,10,10,0" VerticalAlignment="Top" Name="selectRecipe" SelectionChanged="selectRecipe_SelectionChanged" />
-        <ListBox HorizontalAlignment="Right" Margin="0,42,10,10" Width="150"/>
+        <ListBox HorizontalAlignment="Right" Margin="0,42,10,10" Width="150" Name="listIngredients"/>
 
     </Grid>
 </Window>
