--- a/FoodPlanner/FoodPlanner/MainWindow.xaml
+++ b/FoodPlanner/FoodPlanner/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="FoodPlanner.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
         <ComboBox Margin="10,10,10,0" VerticalAlignment="Top" Name="selectRecipe" SelectionChanged="selectRecipe_SelectionChanged" />
         <ListBox HorizontalAlignment="Right" Margin="0,42,10,10" Width="200" Name="listIngredients"/>
