--- a/FoodPlanner/FoodPlanner/InventoryWindow.xaml
+++ b/FoodPlanner/FoodPlanner/InventoryWindow.xaml
@@ -1,15 +1,29 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:FoodPlanner" mc:Ignorable="d" x:Class="FoodPlanner.InventoryWindow"
-        Title="InventoryWindow" Height="300" Width="300" Loaded="Window_Loaded">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:local="clr-namespace:FoodPlanner" mc:Ignorable="d" x:Class="FoodPlanner.InventoryWindow"
+        Title="InventoryWindow" Height="297.487" Width="482.953" Loaded="Window_Loaded">
     <Window.Resources>
         <CollectionViewSource x:Key="userViewSource" d:DesignSource="{d:DesignInstance {x:Type local:User}, CreateList=True}"/>
         <CollectionViewSource x:Key="userInventoryIngredientsViewSource" Source="{Binding InventoryIngredients, Source={StaticResource userViewSource}}"/>
     </Window.Resources>
     <Grid DataContext="{StaticResource userInventoryIngredientsViewSource}">
-        <ListBox HorizontalAlignment="Left" Height="224" Margin="10,31,0,0" VerticalAlignment="Top" Width="267" SelectedValuePath="ID" ItemsSource="{Binding}" DisplayMemberPath="ID"/>
         <Label Content="Inventory" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top"/>
+        <Button Content="Save" HorizontalAlignment="Left" Margin="385,232,0,0" VerticalAlignment="Top" Width="75"
+                Click="Button_Click"/>
+        <DataGrid x:Name="inventoryIngredientsDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="10,31,9.948,36.869" RowDetailsVisibilityMode="VisibleWhenSelected">
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="ingredientColumn" Binding="{Binding Ingredient}" Header="Food" Width="Auto"/>
+                <DataGridTextColumn x:Name="quantityColumn" Binding="{Binding Quantity}" Header="Quantity" Width="Auto"/>
+                <DataGridTextColumn x:Name="purchaseDateColumn" Binding="{Binding PurchaseDate}" Header="PurchaseDate" Width="Auto"/>
+                <DataGridTextColumn x:Name="expirationDateColumn" Binding="{Binding ExpirationDate}" Header="ExpirationDate" Width="Auto"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button Content="Add" HorizontalAlignment="Left" Margin="171,232,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <TextBox x:Name="searchTextBox" HorizontalAlignment="Left" Height="23" Margin="10,231,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="quantityTextBox" HorizontalAlignment="Left" Height="23" Margin="135,232,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="31" Text="1"/>
 
     </Grid>
 </Window>
