--- a/FoodPlanner/FoodPlanner/Search.xaml
+++ b/FoodPlanner/FoodPlanner/Search.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:FoodPlanner" mc:Ignorable="d" x:Class="FoodPlanner.Search"
-        Title="Search" Height="500" Width="700" Loaded="Window_Loaded">
+        Title="Search" Height="500" Width="700" Loaded="Window_Loaded" ResizeMode="NoResize">
     <Window.Resources>
         <CollectionViewSource x:Key="recipeViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Recipe}, CreateList=True}"/>
     </Window.Resources>
@@ -13,7 +13,12 @@
         <ListView Margin="10,45,10,8" x:Name="searchList">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Name" Width="400" DisplayMemberBinding="{Binding recipe}"/>
+                    <!--
+                    <GridViewColumn Header="Name" Width="400" DisplayMemberBinding="{Binding Ingredient.Name}"/>
+                    <GridViewColumn Header="Name" Width="400" DisplayMemberBinding="{Binding Quantity}"/>-->
+                    <GridViewColumn Header="Name" Width="375" DisplayMemberBinding="{Binding recipe}"/>
+                    <GridViewColumn Header="Whole" Width="100" DisplayMemberBinding="{Binding fullMatch}"/>
+                    <GridViewColumn Header="Partial" Width="100" DisplayMemberBinding="{Binding partialMatch}"/>
                     <GridViewColumn Header="Match" Width="100" DisplayMemberBinding="{Binding match}"/>
                 </GridView>
             </ListView.View>
