--- a/FoodPlanner/FoodPlanner/Search.xaml
+++ b/FoodPlanner/FoodPlanner/Search.xaml
@@ -10,7 +10,7 @@
         <TextBox Height="23" Margin="10,10,90,0" TextWrapping="Wrap" VerticalAlignment="Top" Name="searchBox"/>
         <Button Content="Search" HorizontalAlignment="Right" Margin="10,10,10,0" VerticalAlignment="Top" Width="75" Name="startSearch" Click="startSearch_Click"/>
 
-        <ListView Margin="10,45,10,8" x:Name="searchList">
+        <ListView Margin="10,45,220,10" x:Name="searchList">
             <ListView.View>
                 <GridView>
                     <!--
@@ -23,5 +23,6 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <ListBox Name="debugLog" Margin="479,45,10,10"/>
     </Grid>
 </Window>
