--- a/FoodPlanner/FoodPlanner/FoodPlanPage.xaml
+++ b/FoodPlanner/FoodPlanner/FoodPlanPage.xaml
@@ -5,10 +5,10 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="1280" d:DesignWidth="720"
-	Title="FoodPlanPage">
+	Title="FoodPlanPage" Loaded="Page_Loaded">
 
     <Grid>
-        <Button Name="butUp" Content="^" Background="White" Grid.Row="0" Margin="5" />
+        <Button Name="butUp" Content="^" Background="White" Grid.Row="0" Margin="5" Click="updateArrows"/>
         <Button Name="butMon" Content="Mon" Background="White" Grid.Row="1" Margin="5,0,5,10" Click="buttonInFocus"/>
         <Button Name="butTue" Content="Tue" Background="White" Grid.Row="2" Margin="5" Click="buttonInFocus" />
         <Button Name="butWed" Content="Wed" Background="White" Grid.Row="3" Margin="5" Click="buttonInFocus"/>
@@ -16,7 +16,7 @@
         <Button Name="butFri" Content="Fri" Background="White" Grid.Row="5" Margin="5" Click="buttonInFocus"/>
         <Button Name="butSat" Content="Sat" Background="White" Grid.Row="6" Margin="5" Click="buttonInFocus"/>
         <Button Name="butSun" Content="Sun" Background="White" Grid.Row="7" Margin="5" Click="buttonInFocus"/>
-        <Button Name="butDown" Content="v" Background="White" Grid.Row="8" Margin="5"/>
+        <Button Name="butDown" Content="v" Background="White" Grid.Row="8" Margin="5" Click="updateArrows"/>
         <Line Name="upLine" X1="20" Y1="0" X2="20" Y2="140" Stroke="Black" StrokeThickness="3"  Grid.Column="1"/>
         <Line Name="monLine" X1="20" Y1="0" X2="20" Y2="140" Stroke="Black" StrokeThickness="3"  Grid.Column="1" Grid.Row="1"/>
         <Line Name="tueLine" X1="20" Y1="0" X2="20" Y2="140" Stroke="Black" StrokeThickness="3"  Grid.Column="1" Grid.Row="2"/>
