--- a/FoodPlanner/FoodPlanner/InventoryWindow.xaml
+++ b/FoodPlanner/FoodPlanner/InventoryWindow.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:toolkit="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
+   
         xmlns:local="clr-namespace:FoodPlanner" mc:Ignorable="d" x:Class="FoodPlanner.InventoryWindow"
         Title="Inventory" Height="350" Width="650" Loaded="Window_Loaded">
+    <!--    xmlns:toolkit="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"-->
     <Window.Resources>
         <CollectionViewSource x:Key="userViewSource" d:DesignSource="{d:DesignInstance {x:Type local:User}, CreateList=True}"/>
         <CollectionViewSource x:Key="userInventoryIngredientsViewSource" Source="{Binding InventoryIngredients, Source={StaticResource userViewSource}}"/>
@@ -15,9 +16,9 @@
             <Label Content="Inventory" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Top" FontWeight="Bold"/>
             <StackPanel x:Name="LayoutRoot" Orientation="Horizontal" >
                 <TextBlock Text="Add Food:" Margin="5" VerticalAlignment="Center" />
-                <toolkit:AutoCompleteBox x:Name="inventoryAutoCompleteBox" Width="475" Margin="5" VerticalAlignment="Center"
+                <!--<toolkit:AutoCompleteBox x:Name="inventoryAutoCompleteBox" Width="475" Margin="5" VerticalAlignment="Center"
                                          FilterMode="Contains" IsTextCompletionEnabled="True"
-                                         MinimumPopulateDelay="500" MinimumPrefixLength="2" Populating="inventoryAutoCompleteBox_Populating" />
+                                         MinimumPopulateDelay="500" MinimumPrefixLength="2" Populating="inventoryAutoCompleteBox_Populating" />-->
                 <Button x:Name="AddButton"  Content="Add" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Width="75" Click="AddButton_Click"/>
             </StackPanel>
             <DataGrid x:Name="inventoryIngredientsDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" 
