--- a/FoodPlanner/FoodPlanner/MainWindow.xaml
+++ b/FoodPlanner/FoodPlanner/MainWindow.xaml
@@ -1,10 +1,14 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:FoodPlanner" mc:Ignorable="d" x:Class="FoodPlanner.MainWindow"
-        Title="MainWindow" Height="350" Width="525" Closing="Window_Closing">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Models="clr-namespace:FoodPlanner.Models" 
+    xmlns:local="clr-namespace:FoodPlanner"
+    mc:Ignorable="d" x:Class="FoodPlanner.MainWindow"
+    Title="MainWindow" Height="350" Width="525" Closing="Window_Closing">
     <Window.Resources>
-        <CollectionViewSource x:Key="recipeViewSource" d:DesignSource="{d:DesignInstance {x:Type local:Recipe}, CreateList=True}"/>
+        <CollectionViewSource x:Key="recipeViewSource" d:DesignSource="{d:DesignInstance {x:Type Models:Recipe}, CreateList=True}"/>
         <CollectionViewSource x:Key="recipeRecipeIngredientsViewSource" Source="{Binding RecipeIngredients, Source={StaticResource recipeViewSource}}"/>
         <CollectionViewSource x:Key="recipeCookingStepsViewSource" Source="{Binding CookingSteps, Source={StaticResource recipeViewSource}}"/>
     </Window.Resources>
