--- a/FoodPlanner/FoodPlanner/RecipesPage.xaml
+++ b/FoodPlanner/FoodPlanner/RecipesPage.xaml
@@ -8,6 +8,19 @@
 	Title="Recipes">
 
     <Grid>
-        <Button >Testknap</Button>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Label Content="Search:"/>
+        <TextBox Grid.Column="1"/>
+        <ComboBox Grid.Column="2" Height="25.96" VerticalAlignment="Top"/>
+        <ListBox Grid.Row="1" Grid.ColumnSpan="3"/>
     </Grid>
 </Page>
