--- a/FoodPlanner/FoodPlanner/ShoppingListPage.xaml
+++ b/FoodPlanner/FoodPlanner/ShoppingListPage.xaml
@@ -4,10 +4,41 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="720" d:DesignWidth="410"
+      Height="720" Width="410"
 	Title="ShoppingListPage">
 
     <Grid>
+    
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="50"/>
+        </Grid.ColumnDefinitions> 
         
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        <TextBox />
+        
+        <Button  Grid.Column="1">
+                <Image Source="Images/plus_icon_image.png"/>
+        </Button>
+        
+        
+        <ListView Grid.Row="1" Grid.ColumnSpan="2">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Width="Auto" Header="Name"/>
+                    <GridViewColumn Width="Auto" Header="Quantity"/>
+            
+                        
+                    
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+
     </Grid>
 </Page>
