--- a/FoodPlanner/FoodPlanner/SlidePanel.xaml
+++ b/FoodPlanner/FoodPlanner/SlidePanel.xaml
@@ -59,13 +59,21 @@
 					<RowDefinition Height="81"/>
 				</Grid.RowDefinitions>
 				<Grid Background="Black" Grid.Row="0" Grid.ColumnSpan="5" />
-				<Button Content="" Grid.Row="1" Grid.Column="0" >
+				<Button Grid.Row="1" Grid.Column="0">
 					<Button.Background>
-						<ImageBrush ImageSource="refrigerator_slidebutton_image.png" Stretch="Uniform"/>
+						<ImageBrush ImageSource="refigorator.jpg"/>
 					</Button.Background>
 				</Button>
-				<Button Content="Recipes" Grid.Row="1" Grid.Column="1"/>
-				<Button Content="Shopping list" Grid.Row="1" Grid.Column="2"/>
+				<Button Grid.Row="1" Grid.Column="1">
+					<Button.Background>
+						<ImageBrush ImageSource="foodplan.jpg"/>
+					</Button.Background>
+				</Button>
+				<Button Grid.Row="1" Grid.Column="2">
+				<Button.Background>
+						<ImageBrush ImageSource="shoppinglist.jpg"/>
+					</Button.Background>
+				</Button>
 				<Button Content="Inventory" Grid.Row="1" Grid.Column="3"/>
 				<Button Content="Settings" Grid.Row="1" Grid.Column="4"/>
 			</Grid>
