--- a/FoodPlanner/FoodPlanner/SlidePanel.xaml
+++ b/FoodPlanner/FoodPlanner/SlidePanel.xaml
@@ -61,17 +61,17 @@
 				<Grid Background="Black" Grid.Row="0" Grid.ColumnSpan="5" />
 				<Button Grid.Row="1" Grid.Column="0">
 					<Button.Background>
-						<ImageBrush ImageSource="refigorator.jpg"/>
+						<ImageBrush ImageSource="Images/refigorator.jpg"/>
 					</Button.Background>
 				</Button>
 				<Button Grid.Row="1" Grid.Column="1">
 					<Button.Background>
-						<ImageBrush ImageSource="foodplan.jpg"/>
+						<ImageBrush ImageSource="Images/foodplan.jpg"/>
 					</Button.Background>
 				</Button>
 				<Button Grid.Row="1" Grid.Column="2">
 				<Button.Background>
-						<ImageBrush ImageSource="shoppinglist.jpg"/>
+						<ImageBrush ImageSource="Images/shoppinglist.jpg"/>
 					</Button.Background>
 				</Button>
 				<Button Content="Inventory" Grid.Row="1" Grid.Column="3"/>
