--- a/FoodPlanner/FoodPlanner/RecipesPage.xaml
+++ b/FoodPlanner/FoodPlanner/RecipesPage.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-
+		<Grid Background="Gray"/>
         <Label Content="Search:"/>
         <TextBox Grid.Column="1"/>
         <ComboBox Grid.Column="2" Height="25.96" VerticalAlignment="Top"/>
