--- a/FoodPlanner/FoodPlanner/SlidePanel.xaml
+++ b/FoodPlanner/FoodPlanner/SlidePanel.xaml
@@ -61,7 +61,7 @@
 				<Grid Background="Black" Grid.Row="0" Grid.ColumnSpan="5" />
 				<Button Grid.Row="1" Grid.Column="0">
 					<Button.Background>
-						<ImageBrush ImageSource="Images/refigorator.jpg"/>
+						<ImageBrush ImageSource="Images/calender.jpg"/>
 					</Button.Background>
 				</Button>
 				<Button Grid.Row="1" Grid.Column="1">
@@ -74,8 +74,16 @@
 						<ImageBrush ImageSource="Images/shoppinglist.jpg"/>
 					</Button.Background>
 				</Button>
-				<Button Content="Inventory" Grid.Row="1" Grid.Column="3"/>
-				<Button Content="Settings" Grid.Row="1" Grid.Column="4"/>
+				<Button Grid.Row="1" Grid.Column="3">
+					<Button.Background>
+						<ImageBrush ImageSource="Images/refigorator.jpg"/>
+					</Button.Background>
+				</Button>
+				<Button Grid.Row="1" Grid.Column="4">
+					<Button.Background>
+						<ImageBrush ImageSource="Images/settings.jpg"/>
+					</Button.Background>
+				</Button>
 			</Grid>
 		</StackPanel>
 	</Grid>
