--- a/FoodPlanner/FoodPlanner/Views/RecipesPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipesPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="FoodPlanner.Recipes"
+﻿<Page x:Class="FoodPlanner.Views.Recipes"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
